	     in ldiskfs2 only, so older kernels and current ldiskfs cannot
	     mount filesystems that have had this feature enabled.

Severity   : enhancement
Bugzilla   : 10816
Description: Improve multi-block allocation algorithm to avoid fragmentation
Details    : The mballoc3 code (ldiskfs2 only) adds new mechanisms to improve
	     allocation locality and avoid filesystem fragmentation.

------------------------------------------------------------------------------

2007-04-01  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.4.10
       * Support for kernels:
        2.4.21-47.0.1.EL (RHEL 3)
        2.6.5-7.283 (SLES 9)
        2.6.9-42.0.10.EL (RHEL 4)
        2.6.12.6 vanilla (kernel.org)
        2.6.16.27-0.9 (SLES 10)
       * Recommended e2fsprogs version: 1.39.cfs5

       * Note that reiserfs quotas are disabled on SLES 10 in this kernel
       * bug fixes

Severity   : critical
Frequency  : occasional, depends on client load and configuration
Bugzilla   : 12181, 12203
Description: data loss for recently-modified files
Introduced : 1.4.6
Details    : In some cases it is possible that recently written or created
	     files may not be written to disk in a timely manner (this should
	     normally be within 30s unless client IO load is very high).
	     The problem appears as zero-length files or files that are a
	     multiple of 1MB in size after a client crash or client eviction
	     that are missing data at the end of the file.

	     This problem is more likely to be hit on clients where files are
	     repeatedly created and unlinked in the same directory, clients
	     have a large amount of RAM, have many CPUs, the filesystem has
	     many OSTs, the clients are rebooted frequently, and/or the files
	     are not accessed by other nodes after being written.

	     The presence of the problem can be detected by looking at
	     /proc/sys/fs/inode-state.  If the first number (nr_inodes) is